@@ -221,8 +221,12 @@ in the future.
 
 .. data:: builder
 
-   The name of the builder (for builtin builders, ``html``, ``htmlhelp``, or
-   ``web``).
+   The name of the builder (e.g. ``html`` or ``htmlhelp``).
+
+.. data:: embedded
+
+   True if the built HTML is supposed to be embedded in some application that
+   handles navigation, e.g. HTML Help or Qt Help.
 
 .. data:: next
 
@@ -239,3 +243,18 @@ in the future.
 .. data:: prev
 
    Like :data:`next`, but for the previous page.
+
+
+In documents that are created from source files (as opposed to
+automatically-generated files like the module index, or documents that already
+are in HTML form), these variables are also available:
+
+.. data:: toc
+
+   The local table of contents for the current page, rendered as HTML bullet
+   lists.
+
+.. data:: toctree
+
+   The global TOC tree containing the current page, rendered as HTML bullet
+   lists.
