@@ -27,6 +27,9 @@ def toctree_directive(name, arguments, options, content, lineno,
     glob = 'glob' in options
 
     ret = []
+    # (title, ref) pairs, where ref may be a document, or an external link,
+    # and title may be None if the document's title is to be used
+    entries = []
     includefiles = []
     includetitles = {}
     all_docnames = env.found_docs.copy()
@@ -39,33 +42,39 @@ def toctree_directive(name, arguments, options, content, lineno,
             # look for explicit titles and documents ("Some Title <document>").
             m = caption_ref_re.match(entry)
             if m:
-                docname = m.group(2)
-                includetitles[docname] = m.group(1)
+                ref = m.group(2)
+                title = m.group(1)
+                docname = ref
             else:
-                docname = entry
+                ref = docname = entry
+                title = None
             # remove suffixes (backwards compatibility)
             if docname.endswith(suffix):
                 docname = docname[:-len(suffix)]
             # absolutize filenames
             docname = docname_join(env.docname, docname)
-            if docname not in env.found_docs:
+            if ref.startswith('http://'): # FIXME: generalize to arbitrary xrefs
+                entries.append((title, ref))
+            elif docname not in env.found_docs:
                 ret.append(state.document.reporter.warning(
                     'toctree references unknown document %r' % docname, line=lineno))
             else:
+                entries.append((title, ref))
                 includefiles.append(docname)
         else:
             patname = docname_join(env.docname, entry)
             docnames = sorted(patfilter(all_docnames, patname))
             for docname in docnames:
                 all_docnames.remove(docname) # don't include it again
+                entries.append((None, docname))
                 includefiles.append(docname)
             if not docnames:
                 ret.append(state.document.reporter.warning(
                     'toctree glob pattern %r didn\'t match any documents' % entry,
                     line=lineno))
     subnode = addnodes.toctree()
+    subnode['entries'] = entries
     subnode['includefiles'] = includefiles
-    subnode['includetitles'] = includetitles
     subnode['maxdepth'] = options.get('maxdepth', -1)
     subnode['glob'] = glob
     subnode['hidden'] = 'hidden' in options
